# tetris-sdl

./: .gitignore  CMakeLists.txt  README.md  issues.md  todo.md
cmake/: FindSDL2_Mixer.cmake
src/: CMakeLists.txt  Common.h  Game.cpp  Game.h  Main.cpp  Matrix.cpp  Matrix.h  TetrisPainter.cpp  TetrisPainter.h  Tetromino.cpp  Tetromino.h
src/lib/: Music.cpp  Painter.cpp  Painter.h  Tetris.cpp  Tetris.h  TetrisPainter.cpp  Tetromino.h
